overview page init

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -48,10 +48,10 @@
   </p-toolbar>
 </header>
 <main class="container py-4 flex gap-4">
-  <aside>
+  <aside class="w-2">
     <app-filter></app-filter>
   </aside>
-  <section>
+  <section class="w-10">
     <router-outlet></router-outlet>
   </section>
 </main>
