--- a/src/app/modules/dashboard/overview/overview.component.html
+++ b/src/app/modules/dashboard/overview/overview.component.html
@@ -1,3 +1,12 @@
-<section>
-    Overview ini gan
+<section style="background-color: #fefefe">
+  <app-overview-tiles></app-overview-tiles>
+  <p-divider styleClass="py-4"></p-divider>
+  <div class="grid w-full">
+    <div class="col-6">
+      <app-top-city></app-top-city>
+    </div>
+    <div class="col-6 pl-4"><app-top-article></app-top-article></div>
+  </div>
+  <p-divider styleClass="py-4"></p-divider>
+  <app-top-media></app-top-media>
 </section>
