--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -36,7 +36,7 @@
     <label for="float-label">Select a City</label>
   </span>
   <div class="flex gap-3">
-    <p-button label="Sign in" type="submit"></p-button>
+    <p-button label="Set Filter" type="submit"></p-button>
     <p-button label="Custom" type="submit" severity="secondary"></p-button>
   </div>
 </div>
