--- a/src/app/modules/dashboard/overview/top-media/top-media.component.html
+++ b/src/app/modules/dashboard/overview/top-media/top-media.component.html
@@ -1,8 +1,8 @@
 <section>
   <div class="flex align-items-center gap-2 mb-4">
-    <i class="pi pi-globe text-primary"></i>
-    <h5>10 Top Media</h5>
-    <i class="pi pi-info-circle"></i>
+    <icon-globe fill="var(--primary-color)"></icon-globe>
+    <div class="text-sm font-semibold">Top 10 Media</div>
+    <icon-info></icon-info>
   </div>
   <div class="grid">
     <div class="col-6">
