--- a/src/app/modules/dashboard/overview/top-media/top-media.component.html
+++ b/src/app/modules/dashboard/overview/top-media/top-media.component.html
@@ -6,244 +6,16 @@
   </div>
   <div class="grid">
     <div class="col-6">
-      <!-- TODO:: EXTRACT TO COMPONENT -->
-      <p-card>
-        <ng-template pTemplate="header">
-          <div
-            class="flex justify-content-between align-items-center pt-3 px-3"
-          >
-            <h5>Okezone.com</h5>
-            <p-button
-              icon="pi pi-ellipsis-h"
-              [outlined]="true"
-              [text]="true"
-              severity="secondary"
-              styleClass="bg-white border-1 border-200"
-            ></p-button>
-          </div>
-        </ng-template>
-        <div class="flex gap-6">
-          <p-chart type="doughnut" [data]="data" [options]="options"></p-chart>
-          <div class="flex flex-column gap-4">
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #fb3b52; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Negative</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">50</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #05b9bf; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Neutral</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">100</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #1b81e2; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Positive</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">200</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </p-card>
+      <app-media-chart [data]="data" title="Tribunnews.com"></app-media-chart>
     </div>
     <div class="col-6">
-      <!-- TODO:: EXTRACT TO COMPONENT -->
-      <p-card>
-        <ng-template pTemplate="header">
-          <div
-            class="flex justify-content-between align-items-center pt-3 px-3"
-          >
-            <h5>Okezone.com</h5>
-            <p-button
-              icon="pi pi-ellipsis-h"
-              [outlined]="true"
-              [text]="true"
-              severity="secondary"
-              styleClass="bg-white border-1 border-200"
-            ></p-button>
-          </div>
-        </ng-template>
-        <div class="flex gap-6">
-          <p-chart type="doughnut" [data]="data" [options]="options"></p-chart>
-          <div class="flex flex-column gap-4">
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #fb3b52; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Negative</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">50</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #05b9bf; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Neutral</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">100</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #1b81e2; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Positive</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">200</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </p-card>
+      <app-media-chart [data]="data" title="Detik.com"></app-media-chart>
     </div>
     <div class="col-6">
-      <!-- TODO:: EXTRACT TO COMPONENT -->
-      <p-card>
-        <ng-template pTemplate="header">
-          <div
-            class="flex justify-content-between align-items-center pt-3 px-3"
-          >
-            <h5>Okezone.com</h5>
-            <p-button
-              icon="pi pi-ellipsis-h"
-              [outlined]="true"
-              [text]="true"
-              severity="secondary"
-              styleClass="bg-white border-1 border-200"
-            ></p-button>
-          </div>
-        </ng-template>
-        <div class="flex gap-6">
-          <p-chart type="doughnut" [data]="data" [options]="options"></p-chart>
-          <div class="flex flex-column gap-4">
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #fb3b52; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Negative</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">50</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #05b9bf; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Neutral</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">100</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #1b81e2; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Positive</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">200</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </p-card>
+      <app-media-chart [data]="data" title="Inews.Id"></app-media-chart>
     </div>
     <div class="col-6">
-      <!-- TODO:: EXTRACT TO COMPONENT -->
-      <p-card>
-        <ng-template pTemplate="header">
-          <div
-            class="flex justify-content-between align-items-center pt-3 px-3"
-          >
-            <h5>Okezone.com</h5>
-            <p-button
-              icon="pi pi-ellipsis-h"
-              [outlined]="true"
-              [text]="true"
-              severity="secondary"
-              styleClass="bg-white border-1 border-200"
-            ></p-button>
-          </div>
-        </ng-template>
-        <div class="flex gap-6">
-          <p-chart type="doughnut" [data]="data" [options]="options"></p-chart>
-          <div class="flex flex-column gap-4">
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #fb3b52; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Negative</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">50</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #05b9bf; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Neutral</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">100</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-            <div>
-              <div class="flex gap-2 mb-2">
-                <div
-                  style="background-color: #1b81e2; width: 10px; height: 20px"
-                ></div>
-                <div class="text-md font-bold">Positive</div>
-              </div>
-              <div class="flex align-items-baseline gap-2">
-                <div class="font-bold text-4xl">200</div>
-                <div class="text-sm text-400">Artikel</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </p-card>
+      <app-media-chart [data]="data" title="Okezone.com"></app-media-chart>
     </div>
   </div>
 </section>
