Integrate API: tiles, word cloud & top kota

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -61,7 +61,7 @@
             styleClass="mr-2"
           ></p-avatar>
           <div class="flex flex-column">
-            <div class="m-0 text-sm">Joh Doe</div>
+            <div class="m-0 text-sm">{{ user?.usr_comp_name ?? "-" }}</div>
             <div class="m-0 text-gray-500 text-xs">Admin</div>
           </div>
         </div>
