--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -36,7 +36,7 @@
               class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1"
             >
               <div class="flex flex-column">
-                <h5>{{ item.name }}</h5>
+                <div class="text-sm font-semibold">{{ item.name }}</div>
                 <p
                   class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-2"
                   style="width: 400px"
