--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -57,7 +57,8 @@
         <i class="pi pi-search font-bold"></i>
         <div class="flex">
           <p-avatar
-            image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+            shape="circle"
+            image="../../../assets/default_avatar.png"
             styleClass="mr-2"
           ></p-avatar>
           <div class="flex flex-column">
