--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -12,7 +12,7 @@
   <span class="select-container">
     <p-dropdown
       [(ngModel)]="selectedCategory"
-      [options]="periodicOptions"
+      [options]="categoryOptions"
       optionLabel="name"
       optionValue="value"
       placeholder="All Category"
@@ -23,7 +23,7 @@
   <span class="select-container">
     <p-dropdown
       [(ngModel)]="selectedSubCategory"
-      [options]="periodicOptions"
+      [options]="subCategoryOptions"
       optionLabel="name"
       optionValue="value"
       placeholder="All Sub Category"
@@ -34,7 +34,7 @@
   <span class="select-container">
     <p-dropdown
       [(ngModel)]="selectedMedia"
-      [options]="periodicOptions"
+      [options]="mediaOptions"
       optionLabel="name"
       optionValue="value"
       placeholder="All Media"
