--- a/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
+++ b/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
@@ -1,19 +1,32 @@
-<div class="flex justify-content-between">
-  <ng-container></ng-container>
-  <app-tile
-    title="Print"
-    [content]="mediaCount.print"
-    icon="globe"
-    bgColor="#D4DCEB"
-    color="#464255"
-  ></app-tile>
-  <app-tile title="Online" [content]="mediaCount.online" icon="globe" color="#FB3B52" bgColor="#ffebee"></app-tile>
-  <app-tile title="TV" [content]="mediaCount.tv" icon="screen" color="#05B9BF" bgColor="#e6f8f9"></app-tile>
-  <app-tile
-    title="Total Article"
-    [content]="mediaCount.total"
-    icon="newspaper"
-    color="#1B81E2"
-    bgColor="#e8f2fc"
-  ></app-tile>
-</div>
+<spinner [spinning]="isLoading">
+  <div class="flex justify-content-between">
+    <app-tile
+      title="Print"
+      [content]="mediaCount.print"
+      icon="globe"
+      bgColor="#D4DCEB"
+      color="#464255"
+    ></app-tile>
+    <app-tile
+      title="Online"
+      [content]="mediaCount.online"
+      icon="globe"
+      color="#FB3B52"
+      bgColor="#ffebee"
+    ></app-tile>
+    <app-tile
+      title="TV"
+      [content]="mediaCount.tv"
+      icon="screen"
+      color="#05B9BF"
+      bgColor="#e6f8f9"
+    ></app-tile>
+    <app-tile
+      title="Total Article"
+      [content]="mediaCount.total"
+      icon="newspaper"
+      color="#1B81E2"
+      bgColor="#e8f2fc"
+    ></app-tile>
+  </div>
+</spinner>
