--- a/src/app/modules/dashboard/overview/top-city/top-city.component.html
+++ b/src/app/modules/dashboard/overview/top-city/top-city.component.html
@@ -4,37 +4,41 @@
     <div class="text-sm font-semibold">Top Kota</div>
     <icon-info></icon-info>
   </div>
-  <div class="mb-4">
-    <p-table [value]="cities" [scrollable]="true" scrollHeight="300px">
-      <ng-template pTemplate="header">
-        <tr class="bg-white">
-          <th class="font-semibold"><p>City</p></th>
-          <th class="text-right">
-            <p>Total Article: {{ totalArticles }}</p>
-          </th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-city>
-        <tr>
-          <td>
-            <p>{{ city.key }}</p>
-          </td>
-          <td class="text-right">
-            <p>{{ city.value }}</p>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
-  <div class="bg-gray-100">
-    <angular-d3-cloud
-      [data]="wordCloud"
-      [width]="520"
-      [height]="200"
-      font="serif"
-      [rotate]="0"
-      [autoFill]="true"
-      [fontSizeMapper]="wordCloudFontSizeMapper"
-    ></angular-d3-cloud>
-  </div>
+  <spinner [spinning]="isAllCountLoading">
+    <div class="mb-4">
+      <p-table [value]="cities" [scrollable]="true" scrollHeight="300px">
+        <ng-template pTemplate="header">
+          <tr class="bg-white">
+            <th class="font-semibold"><p>City</p></th>
+            <th class="text-right">
+              <p>Total Article: {{ totalArticles }}</p>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-city>
+          <tr>
+            <td>
+              <p>{{ city.key }}</p>
+            </td>
+            <td class="text-right">
+              <p>{{ city.value }}</p>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </spinner>
+  <spinner [spinning]="isWordCloudLoading">
+    <div class="bg-gray-100">
+      <angular-d3-cloud
+        [data]="wordCloud"
+        [width]="520"
+        [height]="200"
+        font="serif"
+        [rotate]="0"
+        [autoFill]="true"
+        [fontSizeMapper]="wordCloudFontSizeMapper"
+      ></angular-d3-cloud>
+    </div>
+  </spinner>
 </section>
