--- a/src/app/modules/dashboard/overview/top-media/top-media.component.html
+++ b/src/app/modules/dashboard/overview/top-media/top-media.component.html
@@ -4,9 +4,14 @@
     <div class="text-sm font-semibold">Top 10 Media</div>
     <icon-info></icon-info>
   </div>
-  <div class="grid">
-    <div class="col-6" *ngFor="let chart of chartsData">
-      <app-media-chart [data]="chart" [title]="chart.media_name"></app-media-chart>
+  <spinner [spinning]="isLoading">
+    <div class="grid">
+      <div class="col-6" *ngFor="let chart of chartsData">
+        <app-media-chart
+          [data]="chart"
+          [title]="chart.media_name"
+        ></app-media-chart>
+      </div>
     </div>
-  </div>
+  </spinner>
 </section>
