implemented loading state [login]

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -49,6 +49,7 @@
         styleClass="submit-btn"
         type="submit"
         [disabled]="!loginForm.valid"
+        [loading]="isLoading"
       ></p-button>
     </form>
     <ng-template pTemplate="footer"
